--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Reset defaults */
 ul {
   margin: 0;
-  padding: 0px;
+  padding: 0;
 }
 
 li,
@@ -57,7 +57,7 @@ button {
 
 .button {
   background: none;
-  border: 0px;
+  border: 0;
   color: #888;
   font-size: 15px;
   width: 60px;
@@ -137,7 +137,7 @@ button {
 }
 
 .task-list-item>.text-input {
-  width: 226px
+  width: 226px;
 }
 
 .delete img {
@@ -152,17 +152,18 @@ button {
 
 /* Completed */
 #completed-tasks .task-label {
-  text-decoration: line-through color: #888;
+  text-decoration: line-through;
+  color: #888;
 }
 
 /* Edit Task */
 .task-list-item .text-input {
-  display: none
+  display: none;
 }
 
 .edit-mode .text-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .task-label {
